# QuorumProof

./: Cargo.toml  README.md
.kiro/specs/frontend-bootstrap/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/member-rewards/: .config.kiro  design.md  requirements.md  tasks.md
benches/: Cargo.toml
benches/tests/: benchmarks.rs
contracts/quorum_proof/src/: lib.rs
contracts/quorum_proof/test_snapshots/tests/: test_add_attestor_enables_attestation.1.json  test_attest_revoked_credential_panics.1.json  test_batch_issue_credentials_success.1.json  test_complete_reputation_recovery_success.1.json  test_full_credential_lifecycle_e2e.1.json  test_get_attestor_count.1.json  test_get_credential_count.1.json  test_initiate_recovery_allowed_after_completion.1.json  test_initiate_reputation_recovery_duplicate_panics.1.json  test_initiate_reputation_recovery_no_history_panics.1.json  test_initiate_reputation_recovery_paused_panics.1.json  test_initiate_reputation_recovery_success.1.json  test_is_attested_returns_false_before_threshold_is_met.1.json  test_issuer_field_stored_on_credential.1.json  test_revoke_credential_prevents_attestation.1.json  test_revoke_prunes_subject_credentials_only_for_target_subject.1.json  test_update_slice_threshold_slice_not_found_panics.1.json  test_update_threshold_success.1.json  (+3 more)
contracts/sbt_registry/src/: lib.rs
contracts/zk_verifier/src/: lib.rs
frontend/: pnpm-lock.yaml
frontend/src/: App.tsx  styles.css
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: CredentialDetail.tsx  QuorumSlice.tsx
(+23 files in other folders)
